# tome

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  SECURITY.md  Trunk.toml  biome.json  build.rs  cliff.toml  index.html  package.json  rustfmt.toml  supabase-schema.sql  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml
db/: supabase-schema.sql
docs/: CHANGELOG.md  CONTRIBUTING.md  ROADMAP.md  a11y-notes.md
public/styles/: highlight.css  main.css  reset.css  variables.css
src/: App.vue  app.rs  lib.rs  main.ts
src/assets/styles/: main.css  variables.css
src/components/: icons.rs  mod.rs
src/components/common/: BaseButton.vue  BaseInput.vue  BaseLoader.vue  BaseModal.vue  BaseTextarea.vue  base_button.rs  base_input.rs  base_loader.rs  base_modal.rs  base_textarea.rs  mod.rs
src/components/editor/: MarkdownEditor.vue  markdown_editor.rs  mod.rs
src/components/layout/: AppSidebar.vue  app_topbar.rs  mod.rs
src/components/progress/: ChapterList.vue  ProgressBar.vue  chapter_list.rs  mod.rs  progress_bar.rs
src/components/review/: FlashcardContainer.vue  PomodoroTimer.vue  flashcard_container.rs  mod.rs  pomodoro_timer.rs
src/composables/: announcer.rs  mod.rs  useMarkdown.ts  useTimer.ts  use_markdown.rs  use_timer.rs
src/core/: auth.rs  error.rs  highlight.rs  markdown.rs  mod.rs  postgrest.rs  srs.rs  supabase.rs  time.rs  utils.rs  validate.rs
src/core/types/: database.rs  mod.rs
src/lib/: supabase.ts
src/router/: index.ts
src/stores/: auth.rs  auth.ts  books.rs  books.ts  mod.rs  notes.rs  notes.ts  progress.rs  progress.ts  settings.rs
src/types/: database.ts  index.ts
src/views/: BookView.vue  DashboardView.vue  LoginView.vue  RegisterView.vue  ReviewView.vue  book_view.rs  dashboard_view.rs  login_view.rs  mod.rs  not_found.rs  register_view.rs  review_view.rs  router.rs
